--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216282909)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216317070)
 
 *Tag Predicate:* `ALL`
 
@@ -29,9 +29,10 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["array","index",("sumelt","100000000:-1:1")]` | 0.65 (15.00%) :white_check_mark: | 1.00 (1.00%)  |
-| `["linalg","factorization",("eigfact","Diagonal",256)]` | 1.17 (15.00%) :x: | 1.00 (1.00%)  |
-| `["tuple","index",("sumelt","TupleWrapper",8,Float32)]` | 0.75 (20.00%) :white_check_mark: | 1.00 (1.00%)  |
+| `["array","comprehension",("comprehension_indexing","FloatRange{Float64}")]` | 0.75 (15.00%) :white_check_mark: | 1.00 (1.00%)  |
+| `["array","index",("sumeach","BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int32,2}")]` | 1.31 (15.00%) :x: | 1.00 (1.00%)  |
+| `["linalg","arithmetic",("-","Tridiagonal","Tridiagonal",256)]` | 1.22 (20.00%) :x: | 1.00 (1.00%)  |
+| `["simd",("conditional_loop!","Int64",4095)]` | 1.16 (15.00%) :x: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -88,15 +89,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13303.546875 MB free)
-Uptime: 1.8578923e7 sec
-Load Avg:  1.0029296875  0.9853515625  0.8115234375
+Memory: 31.383678436279297 GB (13298.3671875 MB free)
+Uptime: 1.8585969e7 sec
+Load Avg:  1.0029296875  0.9853515625  0.806640625
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14379532 s       4555 s    6070320 s  1830604148 s          9 s
-#2  3501 MHz   20107442 s        142 s    2427750 s  1832980310 s          0 s
-#3  3501 MHz   10211287 s       1153 s    2818955 s  1842801973 s          1 s
-#4  3501 MHz    8985820 s        454 s    2379098 s  1844957474 s          0 s
+#1  3501 MHz   14379725 s       4555 s    6072204 s  1831304394 s          9 s
+#2  3501 MHz   20405050 s        142 s    2428955 s  1833385691 s          0 s
+#3  3501 MHz   10211355 s       1153 s    2819426 s  1843505748 s          1 s
+#4  3501 MHz    8986043 s        454 s    2379293 s  1845661563 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -116,15 +117,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13301.5390625 MB free)
-Uptime: 1.8580433e7 sec
+Memory: 31.383678436279297 GB (13294.96875 MB free)
+Uptime: 1.8587477e7 sec
 Load Avg:  1.0029296875  1.0146484375  0.95458984375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14379617 s       4555 s    6070964 s  1830753786 s          9 s
-#2  3501 MHz   20256262 s        142 s    2428212 s  1832981932 s          0 s
-#3  3501 MHz   10211317 s       1153 s    2818995 s  1842952887 s          1 s
-#4  3501 MHz    8985860 s        454 s    2379127 s  1845108400 s          0 s
+#1  3501 MHz   14379803 s       4555 s    6072663 s  1831454107 s          9 s
+#2  3501 MHz   20553581 s        142 s    2429412 s  1833387343 s          0 s
+#3  3501 MHz   10211412 s       1153 s    2819475 s  1843656379 s          1 s
+#4  3501 MHz    8986099 s        454 s    2379326 s  1845812217 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
