--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216317070)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216337543)
 
 *Tag Predicate:* `ALL`
 
@@ -29,10 +29,7 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["array","comprehension",("comprehension_indexing","FloatRange{Float64}")]` | 0.75 (15.00%) :white_check_mark: | 1.00 (1.00%)  |
-| `["array","index",("sumeach","BaseBenchmarks.ArrayBenchmarks.ArrayLS{Int32,2}")]` | 1.31 (15.00%) :x: | 1.00 (1.00%)  |
-| `["linalg","arithmetic",("-","Tridiagonal","Tridiagonal",256)]` | 1.22 (20.00%) :x: | 1.00 (1.00%)  |
-| `["simd",("conditional_loop!","Int64",4095)]` | 1.16 (15.00%) :x: | 1.00 (1.00%)  |
+| `["tuple","index",("sumelt","NTuple",8,Float32)]` | 1.33 (15.00%) :x: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -89,15 +86,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13298.3671875 MB free)
-Uptime: 1.8585969e7 sec
-Load Avg:  1.0029296875  0.9853515625  0.806640625
+Memory: 31.383678436279297 GB (13333.07421875 MB free)
+Uptime: 1.8590341e7 sec
+Load Avg:  1.0029296875  0.99462890625  0.8515625
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14379725 s       4555 s    6072204 s  1831304394 s          9 s
-#2  3501 MHz   20405050 s        142 s    2428955 s  1833385691 s          0 s
-#3  3501 MHz   10211355 s       1153 s    2819426 s  1843505748 s          1 s
-#4  3501 MHz    8986043 s        454 s    2379293 s  1845661563 s          0 s
+#1  3501 MHz   14380484 s       4555 s    6073413 s  1831738228 s          9 s
+#2  3501 MHz   20702083 s        142 s    2430012 s  1833524505 s          0 s
+#3  3501 MHz   10211512 s       1153 s    2819637 s  1843942474 s          1 s
+#4  3501 MHz    8986305 s        454 s    2379423 s  1846098312 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -117,15 +114,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13294.96875 MB free)
-Uptime: 1.8587477e7 sec
-Load Avg:  1.0029296875  1.0146484375  0.95458984375
+Memory: 31.383678436279297 GB (13326.03515625 MB free)
+Uptime: 1.8591849e7 sec
+Load Avg:  1.0029296875  1.01123046875  0.95458984375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14379803 s       4555 s    6072663 s  1831454107 s          9 s
-#2  3501 MHz   20553581 s        142 s    2429412 s  1833387343 s          0 s
-#3  3501 MHz   10211412 s       1153 s    2819475 s  1843656379 s          1 s
-#4  3501 MHz    8986099 s        454 s    2379326 s  1845812217 s          0 s
+#1  3501 MHz   14380992 s       4555 s    6073963 s  1831887305 s          9 s
+#2  3501 MHz   20850464 s        142 s    2430507 s  1833526290 s          0 s
+#3  3501 MHz   10211538 s       1153 s    2819672 s  1844093170 s          1 s
+#4  3501 MHz    8986360 s        454 s    2379454 s  1846248992 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
