--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216365689)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216380106)
 
 *Tag Predicate:* `ALL`
 
@@ -29,6 +29,7 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
+| `["scalar","predicate",("isinteger","BigFloat")]` | 1.20 (15.00%) :x: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -85,15 +86,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13294.640625 MB free)
-Uptime: 1.8596326e7 sec
-Load Avg:  1.0029296875  0.9853515625  0.81494140625
+Memory: 31.383678436279297 GB (13287.34375 MB free)
+Uptime: 1.8599705e7 sec
+Load Avg:  0.9970703125  0.9853515625  0.9306640625
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14381229 s       4555 s    6075043 s  1832332411 s          9 s
-#2  3501 MHz   20999613 s        142 s    2431235 s  1833823810 s          0 s
-#3  3501 MHz   10211938 s       1153 s    2819997 s  1844539947 s          1 s
-#4  3501 MHz    8986418 s        454 s    2379599 s  1846696391 s          0 s
+#1  3501 MHz   14381532 s       4555 s    6076216 s  1832667501 s          9 s
+#2  3501 MHz   21296740 s        142 s    2432225 s  1833863275 s          0 s
+#3  3501 MHz   10212148 s       1153 s    2820141 s  1844877352 s          1 s
+#4  3501 MHz    8986501 s        454 s    2379670 s  1847034031 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -113,15 +114,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13293.4765625 MB free)
-Uptime: 1.8597836e7 sec
-Load Avg:  1.0859375  1.03662109375  0.96533203125
+Memory: 31.383678436279297 GB (13289.1484375 MB free)
+Uptime: 1.8601207e7 sec
+Load Avg:  1.0029296875  1.0146484375  0.96533203125
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14381308 s       4555 s    6075676 s  1832482042 s          9 s
-#2  3501 MHz   21148385 s        142 s    2431690 s  1833825436 s          0 s
-#3  3501 MHz   10211962 s       1153 s    2820032 s  1844690824 s          1 s
-#4  3501 MHz    8986474 s        454 s    2379632 s  1846847240 s          0 s
+#1  3501 MHz   14381610 s       4555 s    6076869 s  1832816374 s          9 s
+#2  3501 MHz   21444741 s        142 s    2432721 s  1833864921 s          0 s
+#3  3501 MHz   10212203 s       1153 s    2820209 s  1845027444 s          1 s
+#4  3501 MHz    8986537 s        454 s    2379710 s  1847184189 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
