--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216380106)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216380149)
 
 *Tag Predicate:* `ALL`
 
@@ -29,7 +29,8 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["scalar","predicate",("isinteger","BigFloat")]` | 1.20 (15.00%) :x: | 1.00 (1.00%)  |
+| `["linalg","factorization",("eigfact","Diagonal",256)]` | 1.21 (20.00%) :x: | 1.00 (1.00%)  |
+| `["tuple","index",("sumelt","NTuple",30,Float64)]` | 0.81 (15.00%) :white_check_mark: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -86,15 +87,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13287.34375 MB free)
-Uptime: 1.8599705e7 sec
-Load Avg:  0.9970703125  0.9853515625  0.9306640625
+Memory: 31.383678436279297 GB (13286.40234375 MB free)
+Uptime: 1.8602723e7 sec
+Load Avg:  1.0029296875  1.0146484375  0.97607421875
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14381532 s       4555 s    6076216 s  1832667501 s          9 s
-#2  3501 MHz   21296740 s        142 s    2432225 s  1833863275 s          0 s
-#3  3501 MHz   10212148 s       1153 s    2820141 s  1844877352 s          1 s
-#4  3501 MHz    8986501 s        454 s    2379670 s  1847034031 s          0 s
+#1  3501 MHz   14381697 s       4555 s    6077490 s  1832966675 s          9 s
+#2  3501 MHz   21593576 s        142 s    2433194 s  1833867098 s          0 s
+#3  3501 MHz   10212233 s       1153 s    2820249 s  1845178940 s          1 s
+#4  3501 MHz    8986625 s        454 s    2379748 s  1847335628 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -114,15 +115,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13289.1484375 MB free)
-Uptime: 1.8601207e7 sec
-Load Avg:  1.0029296875  1.0146484375  0.96533203125
+Memory: 31.383678436279297 GB (13279.1796875 MB free)
+Uptime: 1.8604236e7 sec
+Load Avg:  1.03271484375  1.02587890625  1.00830078125
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14381610 s       4555 s    6076869 s  1832816374 s          9 s
-#2  3501 MHz   21444741 s        142 s    2432721 s  1833864921 s          0 s
-#3  3501 MHz   10212203 s       1153 s    2820209 s  1845027444 s          1 s
-#4  3501 MHz    8986537 s        454 s    2379710 s  1847184189 s          0 s
+#1  3501 MHz   14381771 s       4555 s    6078074 s  1833116734 s          9 s
+#2  3501 MHz   21742715 s        142 s    2433678 s  1833868692 s          0 s
+#3  3501 MHz   10212282 s       1153 s    2820286 s  1845330154 s          1 s
+#4  3501 MHz    8986640 s        454 s    2379768 s  1847486906 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
