--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216380149)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216392980)
 
 *Tag Predicate:* `ALL`
 
@@ -29,8 +29,7 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["linalg","factorization",("eigfact","Diagonal",256)]` | 1.21 (20.00%) :x: | 1.00 (1.00%)  |
-| `["tuple","index",("sumelt","NTuple",30,Float64)]` | 0.81 (15.00%) :white_check_mark: | 1.00 (1.00%)  |
+| `["tuple","index",("sumelt","TupleWrapper",30,Float64)]` | 1.15 (15.00%) :x: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -87,15 +86,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13286.40234375 MB free)
-Uptime: 1.8602723e7 sec
-Load Avg:  1.0029296875  1.0146484375  0.97607421875
+Memory: 31.383678436279297 GB (13282.79296875 MB free)
+Uptime: 1.8605753e7 sec
+Load Avg:  1.0029296875  1.0146484375  1.0244140625
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14381697 s       4555 s    6077490 s  1832966675 s          9 s
-#2  3501 MHz   21593576 s        142 s    2433194 s  1833867098 s          0 s
-#3  3501 MHz   10212233 s       1153 s    2820249 s  1845178940 s          1 s
-#4  3501 MHz    8986625 s        454 s    2379748 s  1847335628 s          0 s
+#1  3501 MHz   14382159 s       4555 s    6078713 s  1833266769 s          9 s
+#2  3501 MHz   21891615 s        142 s    2434153 s  1833870903 s          0 s
+#3  3501 MHz   10212344 s       1153 s    2820323 s  1845481724 s          1 s
+#4  3501 MHz    8986674 s        454 s    2379792 s  1847638527 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -115,15 +114,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13279.1796875 MB free)
-Uptime: 1.8604236e7 sec
-Load Avg:  1.03271484375  1.02587890625  1.00830078125
+Memory: 31.383678436279297 GB (13281.18359375 MB free)
+Uptime: 1.8607259e7 sec
+Load Avg:  1.0029296875  1.0146484375  1.04541015625
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14381771 s       4555 s    6078074 s  1833116734 s          9 s
-#2  3501 MHz   21742715 s        142 s    2433678 s  1833868692 s          0 s
-#3  3501 MHz   10212282 s       1153 s    2820286 s  1845330154 s          1 s
-#4  3501 MHz    8986640 s        454 s    2379768 s  1847486906 s          0 s
+#1  3501 MHz   14382240 s       4555 s    6079355 s  1833416010 s          9 s
+#2  3501 MHz   22039976 s        142 s    2434652 s  1833872510 s          0 s
+#3  3501 MHz   10212389 s       1153 s    2820345 s  1845632209 s          1 s
+#4  3501 MHz    8986700 s        454 s    2379813 s  1847789041 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
