--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216399094)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216524825)
 
 *Tag Predicate:* `ALL`
 
@@ -29,9 +29,6 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["array","index",("sumcolon","BaseBenchmarks.ArrayBenchmarks.ArrayLF{Int32,2}")]` | 1.17 (15.00%) :x: | 1.00 (1.00%)  |
-| `["linalg","arithmetic",("-","Matrix","Matrix",256)]` | 0.68 (30.00%) :white_check_mark: | 1.00 (1.00%)  |
-| `["linalg","arithmetic",("-","UpperTriangular","UpperTriangular",256)]` | 1.42 (30.00%) :x: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -88,15 +85,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13277.5390625 MB free)
-Uptime: 1.8614807e7 sec
-Load Avg:  1.0029296875  1.0146484375  1.04541015625
+Memory: 31.383678436279297 GB (13321.6484375 MB free)
+Uptime: 1.8654482e7 sec
+Load Avg:  1.0029296875  1.0  0.810546875
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14382862 s       4555 s    6082374 s  1834164221 s          9 s
-#2  3501 MHz   22781954 s        142 s    2437084 s  1833882431 s          0 s
-#3  3501 MHz   10212719 s       1153 s    2820600 s  1846386367 s          1 s
-#4  3501 MHz    8987036 s        454 s    2379974 s  1848543357 s          0 s
+#1  3501 MHz   14383970 s       4555 s    6089505 s  1838112936 s          9 s
+#2  3501 MHz   23079443 s        213 s    2440536 s  1837546491 s          0 s
+#3  3501 MHz   10213559 s       1153 s    2824421 s  1850346366 s          1 s
+#4  3501 MHz    8987456 s        454 s    2381610 s  1852507569 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -116,15 +113,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13276.25 MB free)
-Uptime: 1.8616308e7 sec
-Load Avg:  1.0029296875  1.0146484375  1.04541015625
+Memory: 31.383678436279297 GB (13314.25390625 MB free)
+Uptime: 1.8655991e7 sec
+Load Avg:  1.0234375  1.02392578125  0.96533203125
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14382928 s       4555 s    6082962 s  1834313040 s          9 s
-#2  3501 MHz   22929800 s        142 s    2437586 s  1833884058 s          0 s
-#3  3501 MHz   10212816 s       1153 s    2820653 s  1846536278 s          1 s
-#4  3501 MHz    8987057 s        454 s    2380028 s  1848693344 s          0 s
+#1  3501 MHz   14384279 s       4555 s    6089880 s  1838262551 s          9 s
+#2  3501 MHz   23228092 s        213 s    2440990 s  1837548122 s          0 s
+#3  3501 MHz   10213621 s       1153 s    2824466 s  1850497087 s          1 s
+#4  3501 MHz    8987512 s        454 s    2381638 s  1852658319 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
