--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216524825)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-216541311)
 
 *Tag Predicate:* `ALL`
 
@@ -29,6 +29,7 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
+| `["array","index",("sumelt_boundscheck","100000000:-1:1")]` | 1.36 (15.00%) :x: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -85,15 +86,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13321.6484375 MB free)
-Uptime: 1.8654482e7 sec
-Load Avg:  1.0029296875  1.0  0.810546875
+Memory: 31.383678436279297 GB (13285.8125 MB free)
+Uptime: 1.8657611e7 sec
+Load Avg:  1.0029296875  0.9853515625  0.95458984375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14383970 s       4555 s    6089505 s  1838112936 s          9 s
-#2  3501 MHz   23079443 s        213 s    2440536 s  1837546491 s          0 s
-#3  3501 MHz   10213559 s       1153 s    2824421 s  1850346366 s          1 s
-#4  3501 MHz    8987456 s        454 s    2381610 s  1852507569 s          0 s
+#1  3501 MHz   14384536 s       4555 s    6090514 s  1838423028 s          9 s
+#2  3501 MHz   23377084 s        213 s    2441468 s  1837560502 s          0 s
+#3  3501 MHz   10214048 s       1153 s    2824523 s  1850658543 s          1 s
+#4  3501 MHz    8987532 s        454 s    2381670 s  1852820216 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -113,15 +114,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-65-generic #105-Ubuntu SMP Mon Sep 21 18:50:58 UTC 2015 x86_64 x86_64
-Memory: 31.383678436279297 GB (13314.25390625 MB free)
-Uptime: 1.8655991e7 sec
-Load Avg:  1.0234375  1.02392578125  0.96533203125
+Memory: 31.383678436279297 GB (13282.4765625 MB free)
+Uptime: 1.8659117e7 sec
+Load Avg:  1.0029296875  1.001953125  0.9599609375
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz   14384279 s       4555 s    6089880 s  1838262551 s          9 s
-#2  3501 MHz   23228092 s        213 s    2440990 s  1837548122 s          0 s
-#3  3501 MHz   10213621 s       1153 s    2824466 s  1850497087 s          1 s
-#4  3501 MHz    8987512 s        454 s    2381638 s  1852658319 s          0 s
+#1  3501 MHz   14384595 s       4555 s    6091072 s  1838572442 s          9 s
+#2  3501 MHz   23525428 s        213 s    2441969 s  1837562171 s          0 s
+#3  3501 MHz   10214109 s       1153 s    2824567 s  1850809038 s          1 s
+#4  3501 MHz    8987612 s        454 s    2381700 s  1852970719 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
