--- a/c284a86/c284a86_vs_c284a86.md
+++ b/c284a86/c284a86_vs_c284a86.md
@@ -4,7 +4,7 @@
 
 *Commit(s):* [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8) vs [jrevels/julia@c284a86dc9a198e30a914cdb2523391884482df8](https://github.com/jrevels/julia/commit/c284a86dc9a198e30a914cdb2523391884482df8)
 
-*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-217733120)
+*Triggered By:* [link](https://github.com/jrevels/julia/pull/2#issuecomment-217736274)
 
 *Tag Predicate:* `ALL`
 
@@ -29,7 +29,6 @@ benchmark results remained invariant between builds).
 
 | ID | time ratio | memory ratio |
 |----|------------|--------------|
-| `["scalar","fastmath",("add","Complex{Float32}")]` | 1.33 (20.00%) :x: | 1.00 (1.00%)  |
 
 ## Benchmark Group List
 
@@ -86,15 +85,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-85-generic #129-Ubuntu SMP Thu Mar 17 20:50:15 UTC 2016 x86_64 x86_64
-Memory: 31.383651733398438 GB (25042.12109375 MB free)
-Uptime: 263882.0 sec
-Load Avg:  1.2431640625  1.05712890625  0.970703125
+Memory: 31.383651733398438 GB (25008.2421875 MB free)
+Uptime: 266987.0 sec
+Load Avg:  1.0029296875  1.0146484375  0.96435546875
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz     600779 s          0 s     120003 s   25586019 s          0 s
-#2  3501 MHz    2012601 s          0 s      72506 s   24290398 s          0 s
-#3  3501 MHz     582481 s          0 s      67852 s   25722818 s          1 s
-#4  3501 MHz     581563 s          0 s      67218 s   25726975 s          0 s
+#1  3501 MHz     601458 s          0 s     121146 s   25893595 s          0 s
+#2  3501 MHz    2310018 s          0 s      73393 s   24302603 s          0 s
+#3  3501 MHz     583100 s          0 s      67906 s   26032677 s          1 s
+#4  3501 MHz     581574 s          0 s      67256 s   26037462 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
@@ -114,15 +113,15 @@ Platform Info:
   WORD_SIZE: 64
            Ubuntu 14.04.4 LTS
   uname: Linux 3.13.0-85-generic #129-Ubuntu SMP Thu Mar 17 20:50:15 UTC 2016 x86_64 x86_64
-Memory: 31.383651733398438 GB (25033.8046875 MB free)
-Uptime: 265376.0 sec
-Load Avg:  1.0029296875  1.0146484375  0.9814453125
+Memory: 31.383651733398438 GB (25005.859375 MB free)
+Uptime: 268481.0 sec
+Load Avg:  1.0029296875  1.0146484375  0.98046875
 Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
        speed         user         nice          sys         idle          irq
-#1  3501 MHz     600830 s          0 s     120523 s   25734333 s          0 s
-#2  3501 MHz    2161157 s          0 s      72939 s   24290841 s          0 s
-#3  3501 MHz     582788 s          0 s      67875 s   25871927 s          1 s
-#4  3501 MHz     581564 s          0 s      67234 s   25876398 s          0 s
+#1  3501 MHz     601489 s          0 s     121720 s   26041762 s          0 s
+#2  3501 MHz    2458464 s          0 s      73829 s   24303034 s          0 s
+#3  3501 MHz     583409 s          0 s      67926 s   26181673 s          1 s
+#4  3501 MHz     581575 s          0 s      67272 s   26186772 s          0 s
 
   BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell)
   LAPACK: libopenblas64_
